# rl_deploy

./: README.md
a-1-1-joint-sdk/: README.md
a-1-1-joint-sdk/jointCtrlSDK/: CMakeLists.txt  main.cpp
a-1-1-joint-sdk/jointCtrlSDK/inc/: crc_verify.hpp
a-1-1-joint-sdk/jointCtrlSDK/inc/VulcanSerial/: SerialPort.hpp
a-1-1-joint-sdk/jointCtrlSDK/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
a-1-1-joint-sdk/jointCtrlSDK/install/jointctrlsdk/share/jointctrlsdk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
a-1-1-joint-sdk/jointCtrlSDK/src/: serial_handle.cpp
assets/ddt_diablo/config/: controllers.yaml
assets/ddt_diablo/launch/: load_gazebo.launch  load_rl_interface.launch  load_rviz.launch
assets/ddt_diablo/meshes/: base_link.stl  left_leg1.STL
assets/ddt_diablo/models/: config.yaml  policy_test_jump.pt
assets/ddt_diablo/urdf/: diablo.urdf.xacro  diablo.xacro  diablo_issac_gym.urdf
assets/wl/: CMakeLists.txt  package.xml
assets/wl/config/: joint_names_wheel_legged_open.yaml
assets/wl/launch/: display.launch  gazebo.launch
assets/wl/urdf/: wl.csv  wl.urdf
diablo/: CMakeLists.txt  README.md  package.xml
diablo/config/: controllers.yaml  gazebo.yaml  hw.yaml
diablo/launch/: load_controllers.launch  load_gazebo.launch  load_hw.launch  load_rl_interface.launch  load_rviz.launch
diablo/meshes/: base_link.STL  left_leg2.STL  left_leg3.STL  left_motor.STL  left_wheel.STL  little_wheel_left1.STL  little_wheel_left2.STL  little_wheel_right1.STL  little_wheel_right2.STL  right_leg1.STL  right_leg2.STL  right_leg3.STL  right_motor.STL  right_wheel.STL
diablo/models/: config.yaml  config_vmc.yaml  integrated_policy_1w.pt  integrated_policy_5w.pt  integrated_policy_dt002_1k.pt  integrated_policy_dt002_2k3.pt  integrated_policy_only_stand_1k4.pt  integrated_policy_without_ff_1w.pt  policy_27.pt  policy_27_14k.pt  policy_27_vmc.pt  policy_27_vmc_3w.pt  policy_27_vmc_with_wheel.pt  policy_27_vmc_without_wheel.pt  policy_30.pt  policy_both_test.pt  policy_new_vmc.pt  policy_only_stand.pt  policy_only_stand_c.pt  policy_only_stand_c5k.pt  policy_stand.pt  policy_stand_move.pt  policy_vmc_right.pt  policy_vmc_step.pt
diablo/urdf/: common.xacro  diablo.urdf.xacro  diablo.xacro  diablo_ASM.urdf  diablo_ASM.xacro  diablo_gazebo.urdf  diablo_issac_gym.urdf  gazebo.xacro
diablo/urdf/imu/: imu.urdf.xacro
diablo_hw/: CMakeLists.txt  package.xml
diablo_hw/include/diablo_hw/: DiabloHW.h  DiabloHWLoop.h
diablo_hw/include/diablo_hw/lib/: joint_ctrl_protocol.h  serial_handle.hpp
diablo_hw/include/lib/: serial_handle.hpp
diablo_hw/src/: DIabloHWLoop.cpp  DiabloHW.cpp  diablo_hw.cpp
diablo_hw/src/lib/: crc_verify.cpp  serial_handle.cpp
diablo_hw/src/lib/SerialPort/: SerialPort.cpp
docs/: rl_deploy.md
ps5_joy/: CMakeLists.txt  package.xml
ps5_joy/include/ps5_joy/: ps5Joy.h
ps5_joy/src/: joyTwist.cpp  ps5Joy.cpp
rl_common/ps5_joy/: CMakeLists.txt
rl_common/ps5_joy/launch/: joy_rl.launch  joy_twist.launch
rl_common/ps5_joy/src/: joyRLCommand.cpp  joyTwist.cpp
rl_common/rl_common/: CMakeLists.txt  package.xml
rl_common/robot_common/: CMakeLists.txt
rl_common/robot_common/include/robot_common/interface/can_interface/: socketcan.h
rl_common/robot_common/include/robot_common/utilities/: AccelerationFilter.h  InertialFilter.h  MeanFilter.h  VelocityFilter.h  imu_complementary_filter.h  imu_filter_base.h  ori_tool.h
rl_common/robot_common/src/utilities/: AccelerationFilter.cpp  InertialFilter.cpp  MeanFilter.cpp  VelocityFilter.cpp  imu_complementary_filter.cpp  imu_filter_base.cpp  ori_tool.cpp
rl_common/robot_gazebo/config/: default.yaml
rl_common/robot_gazebo/include/robot_gazebo/: RobotHWSim.h
rl_common/robot_gazebo/src/: RobotHWSim.cpp
rl_common/robot_gazebo/worlds/: pole_world.world  terrian_world.world
rl_common/robot_state_controller/: package.xml
rl_msgs/: CMakeLists.txt  package.xml
rl_msgs/msg/: RobotState.msg  VMC.msg  vmcAction.msg  vmcObs.msg
rl_sdk/: CMakeLists.txt  package.xml
rl_sdk/include/rl_sdk/: rl_sdk.hpp
rl_sdk/src/: rl_interface.cpp  rl_sdk.cpp
robot_common/: CMakeLists.txt  package.xml
robot_common/include/robot_common/interface/can_interface/: can_bus.h  types.h
robot_common/include/robot_common/interface/hardware_interface/: HybridJointInterface.h  actuator_extra_interface.h  robot_state_interface.h
robot_common/include/robot_common/utilities/: can_devices.h  imu_complementary_filter.h  imu_filter_base.h  lp_filter.h  ori_tool.h  ros_param.h  tf_rt_broadcaster.h
robot_common/include/robot_common/utilities/urdf/: common.xacro  imu.stl
robot_common/scripts/: cansend.py
robot_common/src/interface/can_interface/: can_bus.cpp  socketcan.cpp
robot_common/src/utilities/: can_devices.cpp  imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp  ori_tool.cpp  tf_rt_broadcaster.cpp
robot_gazebo/: CMakeLists.txt  package.xml  robot_hw_sim_plugins.xml
robot_gazebo/model/: model.config  pole.sdf  ramp.sdf
robot_gazebo/src/: RobotHWSim.cpp
robot_gazebo/worlds/: pole_world.world  stair_world.world  test.world
robot_state_controller/: CMakeLists.txt
robot_state_controller/include/robot_state_controller/: robot_state_controller.h
robot_state_controller/src/: robot_state_controller.cpp
wheeled_bipedal_gazebo/: CMakeLists.txt  package.xml
wheeled_bipedal_rl_controller/: CMakeLists.txt  package.xml  wheeled_bipedal_rl_controller_plugins.xml
wheeled_bipedal_rl_controller/include/wheeled_bipedal_rl_controller/: WheeledBipedalRLController.h
wheeled_bipedal_rl_controller/include/wheeled_bipedal_rl_controller/vmc/: BaseVMC.h  ParallelVMC.h  SerialVMC.h
wheeled_bipedal_rl_controller/src/: WheeledBipedalRLController.cpp
wheeled_bipedal_rl_controller/src/vmc/: ParallelVMC.cpp  SerialVMC.cpp
wheeled_bipedal_rl_controller/test/: obs2action.cpp
