<?xml version="1.0"?>
<package format="2">
    <name>ps5_joy</name>
    <version>0.0.0</version>
    <description>The ps5_joy package</description>

    <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>

    <license>BSD</license>
    <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
