<?xml version="1.0"?>
<package format="2">
  <name>rl_msgs</name>
  <version>0.0.0</version>
  <description>The msgs package provides all the messages for all controllers</description>
  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
