<?xml version="1.0"?>
<package format="2">
  <name>rl_sdk</name>
  <version>0.0.0</version>
  <description>The rl_sdk package</description>

  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rl_msgs</depend>
</package>
