<?xml version="1.0"?>
<package format="2">
  <name>robot_common</name>
  <version>0.0.0</version>
  <description>common tools in programming</description>
  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">4yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>imu_complementary_filter</depend>
  <depend>imu_filter_madgwick</depend>
</package>