<?xml version="1.0"?>
<package format="2">
  <name>rl_common</name>
  <version>0.1.20</version>
  <description>Meta package that contains package of rl_common.</description>
  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">4yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_common</depend>
  <depend>robot_gazebo</depend>
  <depend>robot_hw</depend>
  <depend>robot_state_controller</depend>

  <export>
    <metapackage/>
  </export>
</package>